--- a/GalacticEngine.vcxproj.filters
+++ b/GalacticEngine.vcxproj.filters
@@ -5,6 +5,15 @@
       <UniqueIdentifier>dc099b97-db68-4655-ab9f-e91b83bac30b</UniqueIdentifier>
       <Extensions>ico;cur;bmp;dds;dlg;fbx;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tga;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Body">
+      <UniqueIdentifier>{941ed555-e1ef-4956-a559-4d3337657053}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Render">
+      <UniqueIdentifier>{a3282129-a0eb-426c-93d2-7ecd4d3c8d02}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Client">
+      <UniqueIdentifier>{2157a103-813c-46c7-a3df-df75d5db6feb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="settings.manifest">
@@ -12,17 +21,63 @@
     </Manifest>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Src\Game.h" />
-    <ClInclude Include="Src\pch.h" />
-    <ClInclude Include="Src\StepTimer.h" />
+    <ClInclude Include="Src\StepTimer.h">
+      <Filter>Client</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Game.h">
+      <Filter>Client</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\pch.h">
+      <Filter>Client</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Body\IBody.hpp">
+      <Filter>Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Body\IPlanet.hpp">
+      <Filter>Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\GalacticEngine.hpp" />
+    <ClInclude Include="Inc\Body\Planet.hpp">
+      <Filter>Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\pch.h" />
+    <ClInclude Include="Inc\Render\PlanetRendererLow.hpp">
+      <Filter>Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\PlanetRendererMed.hpp">
+      <Filter>Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\PlanetRendererHigh.hpp">
+      <Filter>Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\IRenderable.hpp">
+      <Filter>Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\PlanetRendererFactory.hpp">
+      <Filter>Render</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Src\Main.cpp" />
+    <ClCompile Include="Src\Game.cpp">
+      <Filter>Client</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Main.cpp">
+      <Filter>Client</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\GalacticEngine.cpp" />
+    <ClCompile Include="Src\Body\Planet.cpp">
+      <Filter>Body</Filter>
+    </ClCompile>
     <ClCompile Include="Src\pch.cpp" />
-    <ClCompile Include="Src\Game.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Src\resource.rc" />
+    <ClCompile Include="Src\Render\PlanetRendererMed.cpp">
+      <Filter>Render</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\PlanetRendererHigh.cpp">
+      <Filter>Render</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\PlanetRendererLow.cpp">
+      <Filter>Render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\planet.ico">
@@ -30,6 +85,13 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <Filter>Client</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Src\resource.rc">
+      <Filter>Client</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
