Toggle planet detail level

--- a/GalacticEngine.vcxproj
+++ b/GalacticEngine.vcxproj
@@ -166,13 +166,13 @@
     <ClInclude Include="Inc\Body\Planet.hpp" />
     <ClInclude Include="Inc\GalacticEngine.hpp" />
     <ClInclude Include="Inc\pch.h" />
+    <ClInclude Include="Inc\Render\IPlanetRenderer.hpp" />
     <ClInclude Include="Inc\Render\IRenderable.hpp" />
     <ClInclude Include="Inc\Render\PlanetRendererFactory.hpp" />
     <ClInclude Include="Inc\Render\PlanetRendererHigh.hpp" />
     <ClInclude Include="Inc\Render\PlanetRendererLow.hpp" />
     <ClInclude Include="Inc\Render\PlanetRendererMed.hpp" />
     <ClInclude Include="Src\Game.h" />
-    <ClInclude Include="Src\pch.h" />
     <ClInclude Include="Src\StepTimer.h" />
   </ItemGroup>
   <ItemGroup>
