--- a/GalacticEngine.vcxproj.filters
+++ b/GalacticEngine.vcxproj.filters
@@ -14,6 +14,12 @@
     <Filter Include="Client">
       <UniqueIdentifier>{2157a103-813c-46c7-a3df-df75d5db6feb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Render\SphericalQuadTreeTerrain">
+      <UniqueIdentifier>{2227b7a5-b18d-4cc1-94af-63be7b5aa08e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Physics">
+      <UniqueIdentifier>{51afea56-f7cb-46ec-a8d1-30ebc7eb9a77}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="settings.manifest">
@@ -56,6 +62,12 @@
     <ClInclude Include="Inc\Render\IPlanetRenderer.hpp">
       <Filter>Render</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\Render\SphericalQuadTreeTerrain\SphericalQuadTreeTerrain.hpp">
+      <Filter>Render\SphericalQuadTreeTerrain</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Physics\Constants.hpp">
+      <Filter>Physics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Game.cpp">
@@ -77,6 +89,9 @@
     </ClCompile>
     <ClCompile Include="Src\Render\PlanetRendererLow.cpp">
       <Filter>Render</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\SphericalQuadTreeTerrain\SphericalQuadTreeTerrain.cpp">
+      <Filter>Render\SphericalQuadTreeTerrain</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
