--- a/GalacticEngine.vcxproj.filters
+++ b/GalacticEngine.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="Inc\FastNoise\FastNoise.h">
       <Filter>FastNoise</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\Render\Cube.hpp">
+      <Filter>Render</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Game.cpp">
@@ -128,6 +131,9 @@
     </ClCompile>
     <ClCompile Include="Src\FastNoise\FastNoise.cpp">
       <Filter>FastNoise</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\Cube.cpp">
+      <Filter>Render</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
