--- a/GalacticEngine.vcxproj
+++ b/GalacticEngine.vcxproj
@@ -184,6 +184,9 @@
     <ClInclude Include="Inc\Render\SphericalQuadTreeTerrain\ISphericalTerrain.hpp" />
     <ClInclude Include="Inc\Render\SphericalQuadTreeTerrain\SphericalQuadTreeTerrain.hpp" />
     <ClInclude Include="Inc\Render\SphericalQuadTreeTerrain\TerrainNode.hpp" />
+    <ClInclude Include="Inc\Scene\ILightSource.hpp" />
+    <ClInclude Include="Inc\Scene\IStarSystem.hpp" />
+    <ClInclude Include="Inc\Scene\SimpleStarSystem.hpp" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\StepTimer.h" />
   </ItemGroup>
@@ -212,6 +215,7 @@
     <ClCompile Include="Src\Render\SimpleAtmosphere.cpp" />
     <ClCompile Include="Src\Render\SphericalQuadTreeTerrain\SphericalQuadTreeTerrain.cpp" />
     <ClCompile Include="Src\Render\SphericalQuadTreeTerrain\TerrainNode.cpp" />
+    <ClCompile Include="Src\Scene\SimpleStarSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Src\resource.rc" />
