--- a/GalacticEngine.vcxproj
+++ b/GalacticEngine.vcxproj
@@ -170,6 +170,8 @@
     <ClInclude Include="Inc\GalacticEngine.hpp" />
     <ClInclude Include="Inc\pch.h" />
     <ClInclude Include="Inc\Physics\Constants.hpp" />
+    <ClInclude Include="Inc\Physics\Gravity.hpp" />
+    <ClInclude Include="Inc\Physics\Orbits.hpp" />
     <ClInclude Include="Inc\Render\Billboard.hpp" />
     <ClInclude Include="Inc\Render\Cube.hpp" />
     <ClInclude Include="Inc\Render\DirectX\ConstantBuffer.hpp" />
@@ -214,6 +216,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Src\Physics\Gravity.cpp" />
+    <ClCompile Include="Src\Physics\Orbits.cpp" />
     <ClCompile Include="Src\Render\Billboard.cpp" />
     <ClCompile Include="Src\Render\Cube.cpp" />
     <ClCompile Include="Src\Render\DirectX\Effect.cpp" />
