--- a/GalacticEngine.vcxproj
+++ b/GalacticEngine.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="Inc\Render\SphericalQuadTreeTerrain\SphericalQuadTreeTerrain.hpp" />
     <ClInclude Include="Inc\Render\SphericalQuadTreeTerrain\TerrainNode.hpp" />
     <ClInclude Include="Inc\Render\StarRendererFactory.hpp" />
+    <ClInclude Include="Inc\Scene\Camera.hpp" />
     <ClInclude Include="Inc\Scene\ILightSource.hpp" />
     <ClInclude Include="Inc\Scene\IStarSystem.hpp" />
     <ClInclude Include="Inc\Scene\SimpleStarSystem.hpp" />
@@ -231,6 +232,7 @@
     <ClCompile Include="Src\Render\SimpleStarRenderer.cpp" />
     <ClCompile Include="Src\Render\SphericalQuadTreeTerrain\SphericalQuadTreeTerrain.cpp" />
     <ClCompile Include="Src\Render\SphericalQuadTreeTerrain\TerrainNode.cpp" />
+    <ClCompile Include="Src\Scene\Camera.cpp" />
     <ClCompile Include="Src\Scene\SimpleStarSystem.cpp" />
     <ClCompile Include="Src\Utils\PlanetGenerator.cpp" />
     <ClCompile Include="Src\Utils\Shapes.cpp" />
