--- a/GalacticEngine.vcxproj.filters
+++ b/GalacticEngine.vcxproj.filters
@@ -35,6 +35,12 @@
     <Filter Include="Utils">
       <UniqueIdentifier>{4098630d-44df-4f13-8a9c-116931a0b7f5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Render\Atmosphere">
+      <UniqueIdentifier>{dd23a4cf-0365-4a4b-a838-3ffbd19247c3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Render\Body">
+      <UniqueIdentifier>{6806604f-31af-47b8-b8eb-395b237d1dd8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="settings.manifest">
@@ -59,22 +65,7 @@
       <Filter>Body</Filter>
     </ClInclude>
     <ClInclude Include="Inc\pch.h" />
-    <ClInclude Include="Inc\Render\PlanetRendererLow.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Inc\Render\PlanetRendererMed.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Inc\Render\PlanetRendererHigh.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
     <ClInclude Include="Inc\Render\IRenderable.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Inc\Render\PlanetRendererFactory.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Inc\Render\IPlanetRenderer.hpp">
       <Filter>Render</Filter>
     </ClInclude>
     <ClInclude Include="Inc\Render\SphericalQuadTreeTerrain\SphericalQuadTreeTerrain.hpp">
@@ -107,12 +98,6 @@
     <ClInclude Include="Inc\Render\Gradient.hpp">
       <Filter>Render</Filter>
     </ClInclude>
-    <ClInclude Include="Inc\Render\IAtmosphereRenderer.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Inc\Render\SimpleAtmosphere.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
     <ClInclude Include="Inc\Scene\IStarSystem.hpp">
       <Filter>Scene</Filter>
     </ClInclude>
@@ -127,15 +112,6 @@
     </ClInclude>
     <ClInclude Include="Inc\Body\Star.hpp">
       <Filter>Body</Filter>
-    </ClInclude>
-    <ClInclude Include="Inc\Render\IStarRenderer.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Inc\Render\StarRendererFactory.hpp">
-      <Filter>Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Inc\Render\SimpleStarRenderer.hpp">
-      <Filter>Render</Filter>
     </ClInclude>
     <ClInclude Include="Inc\Utils\Shapes.hpp">
       <Filter>Utils</Filter>
@@ -158,6 +134,39 @@
     <ClInclude Include="Inc\Scene\Camera.hpp">
       <Filter>Scene</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\Render\SimpleAtmosphere.hpp">
+      <Filter>Render\Atmosphere</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\ScatteredAtmosphere.hpp">
+      <Filter>Render\Atmosphere</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\PlanetRendererFactory.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\PlanetRendererHigh.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\PlanetRendererLow.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\PlanetRendererMed.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\IPlanetRenderer.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\IAtmosphereRenderer.hpp">
+      <Filter>Render\Atmosphere</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\SimpleStarRenderer.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\StarRendererFactory.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\IStarRenderer.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Game.cpp">
@@ -171,15 +180,6 @@
       <Filter>Body</Filter>
     </ClCompile>
     <ClCompile Include="Src\pch.cpp" />
-    <ClCompile Include="Src\Render\PlanetRendererMed.cpp">
-      <Filter>Render</Filter>
-    </ClCompile>
-    <ClCompile Include="Src\Render\PlanetRendererHigh.cpp">
-      <Filter>Render</Filter>
-    </ClCompile>
-    <ClCompile Include="Src\Render\PlanetRendererLow.cpp">
-      <Filter>Render</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Render\SphericalQuadTreeTerrain\SphericalQuadTreeTerrain.cpp">
       <Filter>Render\SphericalQuadTreeTerrain</Filter>
     </ClCompile>
@@ -198,9 +198,6 @@
     <ClCompile Include="Src\Render\Gradient.cpp">
       <Filter>Render</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Render\SimpleAtmosphere.cpp">
-      <Filter>Render</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Scene\SimpleStarSystem.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
@@ -209,9 +206,6 @@
     </ClCompile>
     <ClCompile Include="Src\Utils\Shapes.cpp">
       <Filter>Utils</Filter>
-    </ClCompile>
-    <ClCompile Include="Src\Render\SimpleStarRenderer.cpp">
-      <Filter>Render</Filter>
     </ClCompile>
     <ClCompile Include="Src\Render\Billboard.cpp">
       <Filter>Render</Filter>
@@ -227,6 +221,24 @@
     </ClCompile>
     <ClCompile Include="Src\Scene\Camera.cpp">
       <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\ScatteredAtmosphere.cpp">
+      <Filter>Render\Atmosphere</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\SimpleAtmosphere.cpp">
+      <Filter>Render\Atmosphere</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\PlanetRendererHigh.cpp">
+      <Filter>Render\Body</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\PlanetRendererLow.cpp">
+      <Filter>Render\Body</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\PlanetRendererMed.cpp">
+      <Filter>Render\Body</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\SimpleStarRenderer.cpp">
+      <Filter>Render\Body</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
