Basis for rendering grass

--- a/GalacticEngine.vcxproj.filters
+++ b/GalacticEngine.vcxproj.filters
@@ -179,6 +179,15 @@
     <ClInclude Include="Inc\Render\NoiseCloudRenderer.hpp">
       <Filter>Render\Body</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\Render\DirectX\TextureManager.hpp">
+      <Filter>Render\DirectX</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\GrassRenderer.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Render\GrassDistributor.hpp">
+      <Filter>Render\Body</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Game.cpp">
@@ -259,6 +268,15 @@
       <Filter>Render\DirectX</Filter>
     </ClCompile>
     <ClCompile Include="Src\Render\NoiseCloudRenderer.cpp">
+      <Filter>Render\Body</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\DirectX\TextureManager.cpp">
+      <Filter>Render\DirectX</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\GrassRenderer.cpp">
+      <Filter>Render\Body</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Render\GrassDistributor.cpp">
       <Filter>Render\Body</Filter>
     </ClCompile>
   </ItemGroup>
